# ixctl

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  NOTES.md  Pipfile  README.md  docker-compose.yml  pyproject.toml  rsconf-regen.sh  setup.py  tox.ini
.github/workflows/: codeql.yml  tests.yml
Ctl/: VERSION  config.yaml  requirements.txt  tmplvars.yaml
Ctl/dev/: .env  docker-compose.yml  example.env  run.sh
Ctl/docker/: Dockerfile.rsconfgen  Dockerfile.tasks  django-uwsgi.ini  entrypoint.sh  manage.sh
docs/: PacketFabric.md  develop.txt  netbox_sync.md  openapi.yaml  quickstart.md
project/ixctl/settings.d/: .gitignore
src/: manage.py
src/django_ixctl/: admin.py  api_schema.py  apps.py  auth.py  context_processors.py  decorators.py  enum.py  forms.py  middleware.py  models.py  peeringdb.py  service_bridge.py  signals.py  urls.py  util.py  validators.py  views.py
src/django_ixctl/autocomplete/: views.py
src/django_ixctl/exporters/: ixf.py
src/django_ixctl/inet/: exceptions.py  util.py  validators.py
src/django_ixctl/management/commands/: ixctl_netbox_sync.py  ixctl_peeringdb_sync.py  ixctl_rsconf_generate.py
src/django_ixctl/migrations/: 0001_initial.py  0002_auto_20200728_1145.py  0002_auto_20200728_1756.py  0002_internetexchange_slug.py  0002_ix_slug_field.py  0003_internetexchange_ixf_export_privacy.py  0003_internetexchange_urlkey.py  0003_ix_add_constraint.py  0004_alter_internetexchange_slug.py  0004_auto_20200728_1804.py  0005_auto_20200728_2218.py  0005_postgres_inet_fields.py  0006_member_state.py  0006_organization_remote_id.py  0007_auto_20211006_1311.py  0007_organization_backend.py  0008_auto_20200801_1154.py  0008_auto_20211020_1239.py  0009_auto_20211021_1225.py  0009_routeserver_extra_config.py  0010_auto_20200801_1429.py  0010_auto_20211021_1256.py  0011_auto_20200801_1434.py  0011_auto_20220711_1220.py  0012_auto_20200801_1503.py  0012_unique_routserver_name.py  0013_auto_20221129_0818.py  0013_routeserver_rpki_bgp_origin_validation.py  0014_auto_20200806_1643.py  0014_internetexchange_verified.py  0015_alter_internetexchange_pdb_id.py  0015_network.py  0016_org_fields.py  0016_organizationdefaultexchange.py  0017_internetexchangemember_port.py  0017_perm_request.py  0018_internetexchange_mtu_internetexchange_vlan_id_and_more.py  0018_internetexchangemember_as_macro.py  0019_alter_internetexchangeprefix_unique_together.py
src/django_ixctl/models/: __init__.py  base.py  ixctl.py  task_interface.py  tasks.py
src/django_ixctl/rest/: __init__.py  authentication.py  decorators.py  filters.py  renderers.py  usage.py  xaa
src/django_ixctl/rest/route/: ixctl.py
src/django_ixctl/rest/serializers/: __init__.py  account.py  ixctl.py  service_bridge.py
src/django_ixctl/rest/urls/: account.py  ixctl.py
src/django_ixctl/rest/views/: account.py  ixctl.py  service_bridge.py
src/django_ixctl/social/backends/: twentyc.py
src/django_ixctl/social/pipelines/: __init__.py
src/django_ixctl/static/common/: app.css  app.js
src/django_ixctl/sync/: netbox.py
src/django_ixctl/templates/: theme-select.html
src/ixctl/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
src/ixctl/settings/: __init__.py  dev.py  run_tests.py
src/ixctl/settings.d/: 01-local.conf.dist  10-base.conf  15-oauth.conf.dist  15-peeringdb.conf  15-xbahn.conf.dist  20-rest.conf
src/ixctl/settings.d.old/: .gitignore  20-rest.conf
src/tests/: conftest.py  djangoinit.py  fixtures.py  test_ixctl_api.py  test_ixctl_context_processors.py  test_ixctl_management.py  test_ixctl_models.py  test_ixctl_peeringdb.py  test_ixctl_validators.py  test_ixctl_views.py
(+97 files in other folders)
