[tool.poetry]
name = "ixctl"
repository = "https://github.com/fullctl/ixctl"
version = "0.5.0-prep8"
description = "ix control"
authors = ["20C <code@20c.com>"]
license = "Apache-2.0"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
]


[tool.poetry.scripts]
ixctl = "ixctl.cli:main"


[tool.poetry.dependencies]
python = "^3.7"
fullctl = { git = "https://github.com/fullctl/fullctl.git", branch = "prep-release" }
arouteserver = "^1.11.0"


[tool.poetry.dev-dependencies]
docker-compose = "^1.29.1"
# tests
codecov = ">=2"
coverage = ">=5"
pytest = ">=6.0.1"
pytest-django = ">=3.8.0"
pytest-cov = "*"

# linting
bandit = "^1.6.2"
black = {version = ">=20", allow-prereleases = true}
isort = "^5.7.0"
flake8 = "^3.8.4"
pre-commit = "^2.13.0"
pyupgrade = "^2.19.4"

#ctl
ctl = "^1.0.0"
jinja2 = "^2.11.2"
tmpl = "^1"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
