[tool.poetry]
name = "ixctl"
repository = "https://github.com/fullctl/ixctl"
version = "3.2.0-rc.2"
description = "ix control"
authors = ["20C <code@20c.com>"]
license = "Apache-2.0"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
]


[tool.poetry.scripts]
ixctl = "ixctl.cli:main"


[tool.poetry.dependencies]
python = "^3.9"
fullctl = { git = "https://github.com/fullctl/fullctl.git", branch = "prep-release" }
arouteserver = ">=1.17"
pydantic = ">=1.10.2"

[tool.poetry.dev-dependencies]
django = ">=2.2"
django-handleref = ">=0.5"
djangorestframework = ">=3.11"

# testing
coverage = ">=5"
pytest = ">=6"
pytest-django = ">=3.8"
pytest-cov = "*"
requests-mock = ">=1.11"
tox = ">=3.23"

# linting
bandit = ">=1.6.2"
mypy = ">=0.950"
pre-commit = ">=2.13"
pyupgrade = ">=2.19"
ruff = ">=0.1"

# docs
markdown = "*"
markdown-include = ">=0.5,<1"
mkdocs = ">=1.2.3"

# ctl
ctl = ">=1"
jinja2 = ">=2"
tmpl = ">=1"

[tool.poetry.group.tasks]
optional = true
[tool.poetry.group.tasks.dependencies]

[tool.poetry.plugins."markdown.extensions"]
pymdgen = "pymdgen.md:Extension"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]
